# android_opencl

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: add.cl  same_array.cl
app/src/main/cl_stub/: cl_stub.c
app/src/main/cl_stub/include/: cl_stub.h
app/src/main/cpp/: CMakeLists.txt  OpenCLDemo.cpp  openCLNR.cpp  openCLNR.h
app/src/main/java/com/example/opencl/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
